--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
     />
     
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/GHLogo.png" />
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@400..800&display=swap" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>CyberDev Portfolio </title>
   </head>
